# agent

./: .gitignore  README.md  ag-sync-rules.sh  bootstrap-project.sh  registry.json  shell-aliases.sh
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/scripts/: daily-reschedule.sh  registry-check.sh
.memory-bank/stories/: 2026-03-04-5-tang-config-va-skill-bien-mat.md  index.md  (+9 more)
global/: CLAUDE.md.example  indie-ecosystem.md  settings.json  statusline-command.sh
hooks/: install-all-projects.sh  install-mb-hook.sh  post-commit-mb-reminder
mcp/haingt-brain/: .gitignore  ARCHITECTURE.md  pyproject.toml
mcp/haingt-brain/design/: claude-eyes.md
mcp/haingt-brain/scripts/: audit_contradictions.py  backfill_consolidation_loop.py  backfill_supersede.py  cleanup_p2_dupes.py  index_tools.py  run_consolidation.py  toolbox-sync.py
mcp/haingt-brain/src/haingt_brain/: __init__.py  consolidate.py  contradiction.py  db.py  embeddings.py  importance.py  judge.py  search.py  server.py  vn_normalize.py
mcp/haingt-brain/src/haingt_brain/tools/: forget.py  graph.py  index.py  outline.py  radar.py  recall.py  save.py  session.py  toolbox.py  unlink.py  update.py
mcp/haingt-brain/tests/: brain_test_utils.py  test_backfill_supersede.py  test_brain_quality.py  test_cleanup_p2.py  test_conflict_surface.py  test_consolidation_p1_p4.py  test_contradiction.py  test_importance.py  test_judge.py  test_near_dup_guard.py  test_recall_access_count.py  test_supersede_pass.py  test_unlink.py  test_vn_normalize.py
memories/: README.md
rules/: global_rules.md
(+97 files in other folders)
